--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<li><a href="https://t.me/boegspriet" class="icon fa-paper-plane"><span class="label">Telegram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/akhadiev" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/ibnrusht" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="ibn.rusht@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:ibn.rusht@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
