--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,7 @@
   
 <body> 
     <center>
-        <object data="KhadievCV.pdf" 
-                width="800"
-                height="500"> 
+        <object data="KhadievCV.pdf"> 
         </object> 
     </center> 
 </body> 
