--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   
 <body> 
     <center>
-        <object data="KhadievCV.pdf"> 
+        <object data="KhadievCV.pdf" width="100%" height="600px"> 
         </object> 
     </center> 
 </body> 
