--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,7 @@
   
 <body> 
     <center>
-        <object data="KhadievCV.pdf" width="1200" height="1000"> 
-        </object> 
+        <embed src="KhadievCV.pdf" type='application/pdf' width="100%" height="700" /> 
     </center> 
 </body> 
   
