--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   
 <body> 
     <center>
-        <embed src="KhadievCV.pdf" type='application/pdf' width="100%" height="700" /> 
+        <embed src="KhadievCV.pdf" type='application/pdf' width="100%" height="100%" /> 
     </center> 
 </body> 
   
