--- a/resume.html
+++ b/resume.html
@@ -2,12 +2,12 @@
 <html> 
   
 <head> 
-    <title>PDF in HTML</title> 
+    <title>Khadiev Amir CV</title> 
 </head> 
   
 <body> 
     <center>
-        <embed src="KhadievCV.pdf" type='application/pdf' width="100%" height="100%" /> 
+        <embed src="KhadievCV.pdf" type='application/pdf' width="100%" height="600px" /> 
     </center> 
 </body> 
   
